Fixed Rounding Mode in Visualization of merge of balances.